beautified template for easier validation

--- a/pages/content/amp-dev/documentation/components/index.html
+++ b/pages/content/amp-dev/documentation/components/index.html
@@ -136,76 +136,62 @@ recent_components:
       {% endif %}
 -->
 
-      <section id="filter" class="ap-m-table-component-container">
-        {% set categories = g.categories('/content/amp-dev/documentation/components/reference', locale=doc.locale) %}
-        {% do doc.styles.addCssFile('/css/components/molecules/table-component.css') %}
-        {% set filter_categories = categories|map(attribute=0)|list|tojson %}
-
-        <h2>Filter by category</h2>
-        {% include 'views/partials/category-filter.j2'%}
-
-        {% for category, docs in categories %}
+<section id="filter" class="ap-m-table-component-container">
+    {% set categories = g.categories('/content/amp-dev/documentation/components/reference', locale=doc.locale) %}
+    {% do doc.styles.addCssFile('/css/components/molecules/table-component.css') %}
+    {% set filter_categories = categories|map(attribute=0)|list|tojson %}
+    <h2>Filter by category</h2>
+    {% include 'views/partials/category-filter.j2' %}
+    {% for category, docs in categories %}
         {% set scope = namespace(categoryFormats = []) %}
-
         {% for doc in docs %}
-          {% set formats = doc.formats or ['websites'] %}
-          {% set scope.categoryFormats = scope.categoryFormats + formats %}
+            {% set formats = doc.formats or ['websites'] %}
+            {% set scope.categoryFormats = scope.categoryFormats + formats %}
         {% endfor %}
-
         [% if not {{ filter_categories }}.includes(category) or {{ filter_categories }}.includes(category) and category == '{{ category|slug }}' %]
         {% set category_name = category.split('.')[1] if category and category.split('.')|length == 2 else category %}
         <div id="{{ category }}" class="ap-m-table-component">
-            {% if category %}
-            <h4 id="{{ category }}">{{ _(category_name) }}</h4>
-            {% endif %}
+            {% if category %}<h4 id="{{ category }}">{{ _(category_name) }}</h4>{% endif %}
             {% for component in docs if component.is_current %}
-            {# The latest document might not support a format, hence we have to check if any version supports a format #}
-            {% set formats = [component.formats] %}
-            {% if component.versions|count > 1 %}
-            {% for version in component.versions %}
-            {% set versionDoc = g.doc('/content/amp-dev/documentation/components/reference/' + component.title + '-v' + version + '.md') %}
-            {% do formats.append(versionDoc.formats) %}
-            {% endfor %}
-            {% endif %}
-            {% set formats = formats|sum(start=[])|unique|list %}
-
-            <a class="ap-m-table-component-link" href="{{ component.url.path }}" [% if format not in {{ formats|tojson }} and forcedFiltered != true %]hidden[% endif %]>
-              <div class="ap-m-table-component-row-components">
-                {% if formats %}
-                {% do doc.styles.addCssFile('/css/components/molecules/tag.css') %}
-                <div class="ap-m-table-component-tags">
-                  {% if 'websites' in formats %}
-                  <div class="ap-m-tag ap-m-tag-websites ap-m-table-component-tag"></div>
-                  {% endif %}
-                  {% if 'stories' in formats %}
-                  <div class="ap-m-tag ap-m-tag-stories ap-m-table-component-tag"></div>
-                  {% endif %}
-                  {% if 'ads' in formats %}
-                  <div class="ap-m-tag ap-m-tag-ads ap-m-table-component-tag"></div>
-                  {% endif %}
-                  {% if 'email' in formats or 'emails' in formats %}
-                  <div class="ap-m-tag ap-m-tag-email ap-m-table-component-tag"></div>
-                  {% endif %}
-                </div>
-                {% else %}
-                <p></p>
+                {# The latest document might not support a format, hence we have to check if any version supports a format #}
+                {% set formats = [component.formats] %}
+                {% if component.versions|count > 1 %}
+                    {% for version in component.versions %}
+                        {% set versionDoc = g.doc('/content/amp-dev/documentation/components/reference/' + component.title + '-v' + version + '.md') %}
+                        {% do formats.append(versionDoc.formats) %}
+                    {% endfor %}
                 {% endif %}
-                <div class="ap-m-table-component-name">
-                  <span class="ap-m-table-component-name-title">{{ component.title }}</span>
-                </div>
-                <div class="ap-m-table-component-info">
-                  <div class="ap-m-table-component-copy">{{ component.teaser.text|truncate(70, false, '...') }}</div>
-                </div>
-              </div>
-            </a>
+                {% set formats = formats|sum(start=[])|unique|list %}
+                <a class="ap-m-table-component-link" href="{{ component.url.path }}" [% if format not in {{ formats|tojson }} and forcedFiltered != true %]hidden[% endif %]>
+                    <div class="ap-m-table-component-row-components">
+                        {% if formats %}
+                            {% do doc.styles.addCssFile('/css/components/molecules/tag.css') %}
+                            <div class="ap-m-table-component-tags">
+                                {% if 'websites' in formats %}<div class="ap-m-tag ap-m-tag-websites ap-m-table-component-tag"></div>{% endif %}
+                                {% if 'stories' in formats %}<div class="ap-m-tag ap-m-tag-stories ap-m-table-component-tag"></div>{% endif %}
+                                {% if 'ads' in formats %}<div class="ap-m-tag ap-m-tag-ads ap-m-table-component-tag"></div>{% endif %}
+                                {% if 'email' in formats or 'emails' in formats %}<div class="ap-m-tag ap-m-tag-email ap-m-table-component-tag"></div>{% endif %}
+                            </div>
+                        {% else %}
+                            <p></p>
+                        {% endif %}
+                        <div class="ap-m-table-component-name">
+                            <span class="ap-m-table-component-name-title">{{ component.title }}</span>
+                        </div>
+                        <div class="ap-m-table-component-info">
+                            <div class="ap-m-table-component-copy">{{ component.teaser.text|truncate(70, false, '...') }}</div>
+                        </div>
+                    </div>
+                </a>
             {% endfor %}
-          </div>
+        </div>
         [% endif %]
-        {% endfor %}
-      </section>
-    </section>
+    {% endfor %}
+</section>
+
+</section>
 <!-- close container -->
-  </div>
+</div>
 </main>
 {% with type = 'component' %}
 {% include 'views/partials/sidebar.j2' %}
