--- a/frontend/templates/views/2021/partials/header.j2
+++ b/frontend/templates/views/2021/partials/header.j2
@@ -24,7 +24,7 @@ to provide its state to other components #}
 
     <a class="ap-header-home" href="{{g.doc('/content/amp-dev/index.html', locale=doc.locale).url.path}}">
       <svg class="ap-header-home-logo"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#logo"></use></svg>
-      {# <span class="ap-header-home-title">AMP</span> #}
+      {# <span class="ap-header-home-title">ABC</span> #}
     </a>
 
     <nav class="ap-header-nav">
