--- a/pages/content/amp-dev/documentation/components/index.html
+++ b/pages/content/amp-dev/documentation/components/index.html
@@ -9,7 +9,7 @@ $localization:
 $hidden: true
 
 flyout:
-  description: The complete AMP library
+  description: The complete ABC library
   icon: components-flyout
 
 teaser:
@@ -43,8 +43,8 @@ recent_components:
       {% include '/views/partials/sidebar-toggle-button.j2' %}
       {% include '/views/partials/breadcrumbs.j2' %}
 
-      <h1>The AMP Component Catalogue</h1>
-      <p>The AMP HTML library consists of a basic runtime that brings the core functionalities of AMP to your page. If you want to add additional features you can do so by using one or more of the ready-to-use AMP components. They are classified as:</p>
+      <h1>The ABC Component Catalogue</h1>
+      <p>The ABC HTML library consists of a basic runtime that brings the core functionalities of ABC to your page. If you want to add additional features you can do so by using one or more of the ready-to-use ABC components. They are classified as:</p>
 <!--
       {% do doc.styles.addCssFile('/css/components/organisms/benefits-overview.css') %}
       <div class="ap--benefits--list">
