--- a/pages/content/amp-dev/documentation/templates/index.html
+++ b/pages/content/amp-dev/documentation/templates/index.html
@@ -17,7 +17,7 @@ teaser:
     width: 1
     height: 1
     alt: lorem ipsum
-  text: AMP Start provides templates and components to create styled AMP sites.
+  text: ABC Start provides templates and components to create styled ABC sites.
 
 stage:
   layout: all
@@ -57,7 +57,7 @@ stage:
     <div class="ap-o-stage ap-o-stage-websites {{doc.stage.layout}}">
       <div class="ap--container-fluid">
         <div class="ap-o-stage-content">
-            <h2 class="ap-o-stage-content-subline">{{ _('How to build AMP without knowing how to code?') }}</h2>
+            <h2 class="ap-o-stage-content-subline">{{ _('How to build ABC without knowing how to code?') }}</h2>
             <h1 class="ap-o-stage-content-headline">{{ _('Easily build user first websites with our templates' )}}</h1>
         </div>
       </div>
