--- a/frontend21/scss/components/tag.scss
+++ b/frontend21/scss/components/tag.scss
@@ -18,6 +18,9 @@
   &.--email {
     @include ci-e-mails;
   }
+  &.--code-architecture {
+    @include ci-code-architecture;
+  }
   &.--general {
     color: color('white');
     background: color('blue-ribbon');
