commented header.scss

--- a/frontend21/scss/components/header.scss
+++ b/frontend21/scss/components/header.scss
@@ -303,18 +303,18 @@
             }
           }
 
-          &.code-architecture {
-            @include gradient-code-architecture;
+          /* &.code-architecture { */
+            /* @include gradient-code-architecture; */
 
-            #{$header}-flyout-item-description,
-            #{$header}-flyout-item-title {
-              color: color('charade');
-            }
+            /* #{$header}-flyout-item-description, */
+            /* #{$header}-flyout-item-title { */
+              /* color: color('charade'); */
+            /* } */
 
-            svg {
-              fill: color('charade');
-            }
-          }
+            /* svg { */
+              /* fill: color('charade'); */
+            /* } */
+          /* } */
 
         }
       }
