updated amp-dev.scss to use code color white

--- a/frontend21/scss/amp-dev.scss
+++ b/frontend21/scss/amp-dev.scss
@@ -151,7 +151,8 @@ p code {
   font-family: $fontFamilyCode;
   font-weight: 500;
   word-break: normal;
-  color: color('black');
+  /* color: color('black'); */
+  color: color('white');
   font-size: 0.9em;
 }
 
