late addition - simplify code-architecture

--- a/frontend21/scss/components/header.scss
+++ b/frontend21/scss/components/header.scss
@@ -303,19 +303,9 @@
             }
           }
 
-          /* &.code-architecture { */
-            /* @include gradient-code-architecture; */
-
-            /* #{$header}-flyout-item-description, */
-            /* #{$header}-flyout-item-title { */
-              /* color: color('charade'); */
-            /* } */
-
-            /* svg { */
-              /* fill: color('charade'); */
-            /* } */
-          /* } */
-
+          &.code-architecture {
+            @include gradient-code-architecture;
+          }
         }
       }
     }
