commented header.scss gradient-code-architecture

--- a/frontend21/scss/components/header.scss
+++ b/frontend21/scss/components/header.scss
@@ -303,9 +303,9 @@
             }
           }
 
-          &.code-architecture {
-            @include gradient-code-architecture;
-          }
+          /* &.code-architecture { */
+            /* @include gradient-code-architecture; */
+          /* } */
         }
       }
     }
