update format-toggle-2021 with code-architecture

--- a/frontend21/scss/components/format-toggle.scss
+++ b/frontend21/scss/components/format-toggle.scss
@@ -91,4 +91,11 @@
       @include ci-e-mails;
     }
   }
+
+  &-link:hover,
+  &-selected {
+    &.--code-architecture {
+      @include ci-code-architecture;
+    }
+  }
 }
