switched from code-arch to ontomatica

--- a/frontend21/scss/components/format-toggle.scss
+++ b/frontend21/scss/components/format-toggle.scss
@@ -94,8 +94,8 @@
 
   &-link:hover,
   &-selected {
-    &.--code-architecture {
-      @include ci-code-architecture;
+    &.--ontomatica {
+      @include ci-ontomatica;
     }
   }
 }
