--- a/frontend21/scss/components/tag.scss
+++ b/frontend21/scss/components/tag.scss
@@ -19,8 +19,8 @@
     @include ci-e-mails;
   }
 
-  &.--code-architecture {
-    @include ci-code-architecture;
+  &.--ontomatica {
+    @include ci-ontomatica;
   }
 
   &.--general {
