updated _colors with ontomatica gradient

--- a/frontend/scss/components/atoms/_color.scss
+++ b/frontend/scss/components/atoms/_color.scss
@@ -40,3 +40,4 @@ It has multiple size modifiers (more could be added below).
 @mixin gradient-stories { background: linear-gradient(225deg, color('clementine') 0%, color('school-bus') 75%); }
 @mixin gradient-ads { background: linear-gradient(225deg, color('lav-magenta') 0%, color('electric-violet') 75%); }
 @mixin gradient-e-mails { background: linear-gradient(225deg, color('japan-laurel') 0%, color('confetti') 75%); }
+@mixin gradient-ontomatica { background: linear-gradient(142deg, color('peach-orange') 0%, color('guardsman-red') 75%); }
