--- a/frontend21/scss/amp-dev.scss
+++ b/frontend21/scss/amp-dev.scss
@@ -2,6 +2,7 @@
 @import '../../frontend/scss/_mixins.scss';
 @import '../../frontend/scss/components/atoms/_icon.scss';
 @import '../../frontend/scss/components/atoms/_color.scss';
+@import '../../frontend/scss/components/organisms/card-grid.scss';
 
 @import 'variables.scss';
 @import 'functions.scss';
