--- a/frontend/scss/components/organisms/card-grid.scss
+++ b/frontend/scss/components/organisms/card-grid.scss
@@ -1,7 +1,7 @@
 /*
 
 #############################
-### ORGANISM: card-grid ########
+### ORGANISM: card-grid #####
 #############################
 
 */
