--- a/frontend/scss/components/organisms-bak/card-grid.scss
+++ b/frontend/scss/components/organisms-bak/card-grid.scss
@@ -7,10 +7,10 @@
 */
 
 
-/* @import '_extends.scss'; */
-/* @import '_functions.scss'; */
-/* @import '_mixins.scss'; */
-/* @import '_variables.scss'; */
+@import '_extends.scss';
+@import '_functions.scss';
+@import '_mixins.scss';
+@import '_variables.scss';
 
 @import 'components/atoms/_headline.scss';
 @import 'components/atoms/_text.scss';
