--- a/frontend21/scss/amp-dev.scss
+++ b/frontend21/scss/amp-dev.scss
@@ -3,6 +3,7 @@
 @import '../../frontend/scss/components/atoms/_icon.scss';
 @import '../../frontend/scss/components/atoms/_color.scss';
 @import '../../frontend/scss/components/organisms/card-grid.scss';
+@import '../../frontend/scss/components/templates/docs-guides-overview.scss';
 
 @import 'variables.scss';
 @import 'functions.scss';
