--- a/frontend/scss/components/organisms/card-grid.scss
+++ b/frontend/scss/components/organisms/card-grid.scss
@@ -12,8 +12,8 @@
 /* @import '_mixins.scss'; */
 /* @import '_variables.scss'; */
 
-@import 'components/atoms/_headline.scss';
-@import 'components/atoms/_text.scss';
+/* @import 'components/atoms/_headline.scss'; */
+/* @import 'components/atoms/_text.scss'; */
 
 .#{utility('card-grid')} {
   display: flex;
