changed path links

--- a/frontend/scss/components/organisms/card-grid.scss
+++ b/frontend/scss/components/organisms/card-grid.scss
@@ -19,8 +19,8 @@
 @import '../../mixins';
 @import '../../variables';
 
-@import '../components/atoms/_headline.scss';
-@import '../components/atoms/_text.scss';
+@import 'components/atoms/_headline.scss';
+@import 'components/atoms/_text.scss';
 
 .#{utility('card-grid')} {
   display: flex;
