--- a/frontend/scss/components/templates-bak/docs-detail.scss
+++ b/frontend/scss/components/templates-bak/docs-detail.scss
@@ -8,16 +8,16 @@
 
 */
 
-@import '../../extends';
-@import '../../functions';
-@import '../../mixins';
-@import '../../variables';
+@import '_extends.scss';
+@import '_functions.scss';
+@import '_mixins.scss';
+@import '_variables.scss';
 
-@import '../atoms/_text.scss';
-@import '../atoms/_color.scss';
-@import '../atoms/_headline.scss';
+@import 'components/atoms/_text.scss';
+@import 'components/atoms/_color.scss';
+@import 'components/atoms/_headline.scss';
 
-@import '../templates/_default.scss';
+@import 'components/templates/_default.scss';
 
 body {
   background-color: color('whisper');
