updated amp-dev.scss imports

--- a/frontend21/scss/amp-dev.scss
+++ b/frontend21/scss/amp-dev.scss
@@ -2,8 +2,12 @@
 @import '../../frontend/scss/_mixins.scss';
 @import '../../frontend/scss/components/atoms/_icon.scss';
 @import '../../frontend/scss/components/atoms/_color.scss';
+@import '../../frontend/scss/components/atoms/button.scss';
+@import '../../frontend/scss/components/molecules/table.scss';
+@import '../../frontend/scss/components/molecules/tip.scss';
 @import '../../frontend/scss/components/organisms/card-grid.scss';
 @import '../../frontend/scss/components/templates/docs-guides-overview.scss';
+@import '../../frontend/scss/components/templates/docs-detail.scss';
 
 @import 'variables.scss';
 @import 'functions.scss';
