--- a/frontend/scss/components/atoms-bak/button.scss
+++ b/frontend/scss/components/atoms-bak/button.scss
@@ -14,12 +14,13 @@ The text style is always extended from light headline 3 but in uppercase letters
 none
 
 */
-@import '../../extends';
-@import '../../functions';
-@import '../../mixins';
-@import '../../variables';
 
-@import '../atoms/_button.scss';
+@import '_extends.scss';
+@import '_functions.scss';
+@import '_mixins.scss';
+@import '_variables.scss';
+
+@import 'components/atoms/_button.scss';
 
 .#{atom('btn')} {
   @include btn;
