updated button and _button

--- a/frontend/scss/components/atoms-bak/_button.scss
+++ b/frontend/scss/components/atoms-bak/_button.scss
@@ -15,15 +15,14 @@ none
 
 */
 
-@import '../../extends';
-@import '../../functions';
-@import '../../mixins';
-@import '../../variables';
+@import '_extends.scss';
+@import '_functions.scss';
+@import '_mixins.scss';
+@import '_variables.scss';
 
-
-@import '../atoms/_color.scss';
-@import '../atoms/_text.scss';
-@import '../atoms/_headline.scss';
+@import 'components/atoms/_color.scss';
+@import 'components/atoms/_text.scss';
+@import 'components/atoms/_headline.scss';
 
 @mixin unset-button {
   -webkit-appearance: none;
