upgraded amp-dev.css with new scss

--- a/frontend/scss/components/molecules-bak/format-filter-hint.scss
+++ b/frontend/scss/components/molecules-bak/format-filter-hint.scss
@@ -1,14 +1,7 @@
-/* @import '_extends.scss'; */
-/* @import '_functions.scss'; */
-/* @import '_mixins.scss'; */
-/* @import '_variables.scss'; */
-
-/* @import '../atoms/_text.scss'; */
-
-@import '../../extends';
-@import '../../mixins';
-@import '../../functions';
-@import '../../variables';
+@import '_extends.scss';
+@import '_functions.scss';
+@import '_mixins.scss';
+@import '_variables.scss';
 
 @import '../atoms/_text.scss';
 
