--- a/frontend/scss/components/molecules-bak/info-button.scss
+++ b/frontend/scss/components/molecules-bak/info-button.scss
@@ -6,22 +6,14 @@
 
 */
 
-/* @import '_extends.scss'; */
-/* @import '_functions.scss'; */
-/* @import '_mixins.scss'; */
-/* @import '_variables.scss'; */
+@import '_extends.scss';
+@import '_functions.scss';
+@import '_mixins.scss';
+@import '_variables.scss';
 
-/* @import 'components/atoms/_color.scss'; */
-/* @import 'components/atoms/_text'; */
+@import 'components/atoms/_color.scss';
+@import 'components/atoms/_text';
 
-
-@import '../../extends';
-@import '../../mixins';
-@import '../../functions';
-@import '../../variables';
-
-@import '../atoms/_color.scss';
-@import '../atoms/_text.scss';
 
 $borderSize: 5px;
 
