--- a/frontend/scss/components/molecules-bak/level-toggle.scss
+++ b/frontend/scss/components/molecules-bak/level-toggle.scss
@@ -1,18 +1,10 @@
-/* @import '_extends.scss'; */
-/* @import '_functions.scss'; */
-/* @import '_mixins.scss'; */
-/* @import '_variables.scss'; */
+@import '_extends.scss';
+@import '_functions.scss';
+@import '_mixins.scss';
+@import '_variables.scss';
 
-/* @import 'components/atoms/_color.scss'; */
-/* @import 'components/atoms/_text'; */
-
-@import '../../extends';
-@import '../../mixins';
-@import '../../functions';
-@import '../../variables';
-
-@import '../atoms/_color.scss';
-@import '../atoms/_text.scss';
+@import 'components/atoms/_color.scss';
+@import 'components/atoms/_text';
 
 $borderSize: 5px;
 
