upgraded to jinja-2021

--- a/frontend/templates/views/detail/docs-detail.j2
+++ b/frontend/templates/views/detail/docs-detail.j2
@@ -5,7 +5,8 @@
 {% include 'views/partials/format-filter-hint.j2' %}
 <main class="ap--main ap-t-docs-detail">
   <div class="ap--container">
-    {% include 'views/partials/sidebar-toggle.j2' %}
+    {# {% include 'views/partials/sidebar-toggle.j2' %} #}
+    {% include 'views/2021/partials/sidebar-toggle.j2' %}
     <span id="ap--sidebar-content" class="ap--sidebar"></span>
     {% include 'views/partials/content.j2' %}
 
@@ -19,7 +20,7 @@
         {% set next_document = doc.next(docs=document_list) %}
 
         {% if not previous_document and next_document %}
-        {% do doc.styles.addCssFile('css/components/atoms/button.css') %}
+        {# {% do doc.styles.addCssFile('css/components/atoms/button.css') %} #}
         <a href="{{ next_document.url.path }}" class="ap-a-btn">
           {{ _('Get started') }}
         </a>
@@ -51,5 +52,6 @@
 
   </div>
 </main>
-{% include 'views/partials/sidebar.j2' %}
+{# {% include 'views/partials/sidebar.j2' %} #}
+{% include 'views/2021/partials/sidebar.j2' %}
 {% endblock %}
