--- a/frontend/templates/views/partials/level-toggle.j2
+++ b/frontend/templates/views/partials/level-toggle.j2
@@ -1,5 +1,5 @@
-{% do doc.styles.addCssFile('css/components/molecules/info-button.css') %}
-{% do doc.styles.addCssFile('css/components/molecules/level-toggle.css') %}
+{# {% do doc.styles.addCssFile('css/components/molecules/info-button.css') %} #}
+{# {% do doc.styles.addCssFile('css/components/molecules/level-toggle.css') %} #}
 {% set level = doc.level %}
 {% set url = doc.url.path %}
 
