--- a/frontend/templates/views/overview/guides.j2
+++ b/frontend/templates/views/overview/guides.j2
@@ -4,10 +4,12 @@
 {% include 'views/partials/sidebar-toggle-observer.j2' %}
 <main class="ap--main ap-t-docs-guides-overview">
   <div class="ap--container">
-    {% include 'views/partials/sidebar-toggle.j2' %}
+    {# {% include 'views/partials/sidebar-toggle.j2' %} #}
+    {% include 'views/2021/partials/sidebar-toggle.j2' %}
     <span id="ap--sidebar-content" class="ap--sidebar"></span>
     {% include 'views/partials/content.j2' %}
   </div>
 </main>
-{% include 'views/partials/sidebar.j2' %}
+{# {% include 'views/partials/sidebar.j2' %} #}
+{% include 'views/2021/partials/sidebar.j2' %}
 {% endblock %}
