--- a/frontend/templates/views/partials/content.j2
+++ b/frontend/templates/views/partials/content.j2
@@ -1,10 +1,12 @@
 {# If the doc has content to render, render it and pluck out the TOC if needed #}
 {% if doc.html %}
-{% include '/views/partials/toc.j2' with context %}
+{# {% include '/views/partials/toc.j2' with context %} #}
+{% include '/views/2021/partials/toc.j2' with context %}
 
 <section class="ap--content">
   {% include '/views/partials/sidebar-toggle-button.j2' %}
-  {% include '/views/partials/breadcrumbs.j2' %}
+  {# {% include '/views/partials/breadcrumbs.j2' %} #}
+  {% include '/views/2021/partials/breadcrumbs.j2' %}
 
   {% if doc.title and doc.view in ['/views/detail/docs-detail.j2'] %}
   <h1>{{ doc.title }}</h1>
@@ -12,7 +14,7 @@
 
   {% set formats = ['ads', 'email', 'stories', 'websites'] %}
   {% if (doc.formats|sort or formats) != formats %}
-  {% do doc.styles.addCssFile('css/components/molecules/tip.css') %}
+  {# {% do doc.styles.addCssFile('css/components/molecules/tip.css') %} #}
   [% set availableFormats = {{ doc.formats|tojson }} %]
   [% if not availableFormats.includes(format) %]
   <div class="ap-m-tip">
@@ -45,7 +47,7 @@
 {# If its a empty doc render short information about it #}
 {% else %}
 
-{% do doc.styles.addCssFile('css/components/molecules/tip.css') %}
+{# {% do doc.styles.addCssFile('css/components/molecules/tip.css') %} #}
 <section class="ap--content">
   {% include '/views/partials/sidebar-toggle-button.j2' %}
 
