--- a/frontend/templates/views/2021/partials/sidebar.j2
+++ b/frontend/templates/views/2021/partials/sidebar.j2
@@ -4,33 +4,113 @@
 
 <amp-sidebar id="sidebar" class="ap-sidebar" layout="nodisplay" side="left">
   <nav toolbar="(min-width: 768px)" toolbar-target="sidebar-toolbar">
-{#
+
     {% include '/views/2021/partials/format-toggle.j2' %}
-#}
-    {% set components = g.collection('/content/amp-dev/documentation/components/reference').list_docs(locale=doc.locale) %}
-    {% set scope = namespace(initial=components[0].title[4]) %}
+
     <div class="ap-sidebar-scroll-container">
       <ul class="ap-sidebar-nav-list">
-        {% for component in components %}
+            {% macro nav_tree(root, iteration=1, depth=None) -%}
+            {% if not depth or iteration <= depth %}
+            <ul class="nav-list level-{{ iteration }}">
+                {% set collections = root.collections() %}
+                {% set documents = root.list_docs(locale=doc.locale)|list %}
 
-        {% set initial = component.title[4] %}
-        {% if scope.initial != initial and loop.nextitem or loop.first %}
-        {% set scope.initial = initial %}
-        <li class="ap-sidebar-nav-list-section">
-          <ul>
-            <div class="ap-sidebar-nav-list-section-title">{{ initial }}</div>
-        {% endif %}
+                {% set items = (collections + documents)|sort(attribute='order') %}
 
-            <li>
-              <a class="ap-sidebar-nav-list-link" href="{{ component.url.path }}">{{ component.title }}</a>
-            </li>
+                {% for item in items %}
 
-        {% if loop.nextitem and scope.initial != loop.nextitem.title[4] or loop.last %}
-          </ul>
-        </li>
-        {% endif %}
+                {% if loop.previtem and item.tutorial and not loop.previtem.tutorial %}
+                <li class="nav-item-tutorial-divider"></li>
+                {% endif %}
 
-        {% endfor %}
+                {% if not item.draft or doc.pod.env.dev %}
+                {# Check if the item is a) collection ... #}
+                {% if '<Collection' in item|pprint %}
+                {% set collection = item %}
+                {% set currentCollectionPaths = doc.collection.collection_path.split('/') %}
+                {% set allCollectionPaths = collection.collection_path.split('/') %}
+                {% set activeCollection = true if currentCollectionPaths[-1] == allCollectionPaths[-1] or currentCollectionPaths[-2] == allCollectionPaths[-1] else None %}
+
+                {% set formats = collection.formats or [] %}
+                [% if format in {{ formats|tojson }} %]
+                <li class="nav-item{{ ' active' if activeCollection }} level-{{ iteration }}">
+                  {% set collection_index = '/content/' + collection.collection_path + '/index.md' %}
+                  {% if doc.pod.file_exists(collection_index) %}
+                  {% set collection_index = g.doc(collection_index, locale=doc.locale) %}
+                  <a class="nav-link" href="{{ collection_index.url.path }}">
+                    {# Get translated collection title #}
+                    {% set collection_title = collection.tagged_fields.get('$title@' + doc.locale.language, collection.title) %}
+
+                    {% if collection.tutorial %}
+
+                    {% set tutorial_title = collection_title.split(' ') %}
+                    {% set tutorial_first_part = ' '.join(tutorial_title[0:-1]) %}
+                    {% set tutorial_last_word = tutorial_title[-1] %}
+
+                    {% do doc.icons.useIcon('icons/tutorial.svg') %}
+                    <span>{{ tutorial_first_part }}</span> <span class="nav-link-lastword">{{ tutorial_last_word }}<svg class="ap-a-ico nav-type-icon"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#tutorial"></use></svg></span>
+
+                    {% else %}
+                      <span>{{ collection_title }}</span>
+                    {% endif %}
+                  </a>
+                  {% else %}
+                  <span class="nav-link">
+                    <span>{{ _(collection.title) }}</span>
+                    {% if collection.tutorial %}
+                    {% do doc.icons.useIcon('icons/tutorial.svg') %}
+                    <svg class="ap-a-ico nav-type-icon"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#tutorial"></use></svg>
+                    {% endif %}
+                  </span>
+                  {% endif %}
+                  <input class="nav-trigger" type="checkbox"{{ ' checked' if activeCollection or (iteration == 1 and doc.view == "/views/overview/guides.j2") }}/>
+                  <div class="nav-icon">
+                    {% if iteration==1 %}
+                    {% do doc.icons.useIcon('icons/angle-down-solid.svg') %}
+                    <svg class="ap-a-ico"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#angle-down-solid"></use></svg>
+                    {% else %}
+                    {% do doc.icons.useIcon('icons/angle-down-light.svg') %}
+                    <svg class="ap-a-ico light"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#angle-down-light"></use></svg>
+                    {% endif %}
+                  </div>
+                  {{ nav_tree(collection, iteration=iteration+1, depth=depth) }}
+                </li>
+                [% endif %]
+                {# Check if the item is b) document #}
+                {% elif '<Document' in item|pprint %}
+                {% set document = item %}
+                {% if not document.hidden %}
+                {% set formats = document.formats or document.collection.formats or [] %}
+                {% set activeDocument = true if document.url == doc.url %}
+                [% if format in {{ formats|tojson }} %]
+                <li class="nav-item{{ ' active' if activeDocument }} level-{{ iteration }}"{{ ' autoscroll' if activeDocument }}>
+                  {# If the document is part of a tutorial render progress #}
+                  {% if document.collection.tutorial %}
+                  {% do doc.styles.addCssFile('/css/components/molecules/tutorial-progress.css') %}
+                  <div class="ap-m-tutorial-progress {{ ' ap-m-tutorial-progress-finished' if doc.order > document.order and doc.collection == document.collection }}"></div>
+                  {% endif %}
+
+                  <a class="nav-link" href="{{ document.url.path }}">
+                    {{ document.titles('sidebar') }}
+                    {% if document.tutorial %}
+                    {% do doc.icons.useIcon('icons/tutorial.svg') %}
+                    <svg class="ap-a-ico nav-type-icon"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#tutorial"></use></svg>
+                    {% endif %}
+                  </a>
+                </li>
+                [% endif %]
+                {% endif %}
+                {% endif %}
+                {% endif %}
+
+                {% endfor %}
+            </ul>
+            {% endif %}
+            {%- endmacro %}
+
+            {% set split_path = doc.collection.collection_path.split('/') %}
+            {% set current_path = '/'.join(split_path[:3]) %}
+            {{ nav_tree(root=g.collection(current_path)) }}
       </ul>
     </div>
   </nav>
