2019 button replaced with 2021-sidebar-toggle

--- a/frontend/templates/views/partials/content.j2
+++ b/frontend/templates/views/partials/content.j2
@@ -4,7 +4,7 @@
 {% include '/views/2021/partials/toc.j2' with context %}
 
 <section class="ap--content">
-  {% include '/views/partials/sidebar-toggle-button.j2' %}
+  {# {% include '/views/partials/sidebar-toggle-button.j2' %} #}
   {# {% include '/views/partials/breadcrumbs.j2' %} #}
   {% include '/views/2021/partials/breadcrumbs.j2' %}
 
@@ -49,7 +49,7 @@
 
 {# {% do doc.styles.addCssFile('css/components/molecules/tip.css') %} #}
 <section class="ap--content">
-  {% include '/views/partials/sidebar-toggle-button.j2' %}
+  {# {% include '/views/partials/sidebar-toggle-button.j2' %} #}
 
   <h1>{{ doc.title }}</h1>
   <div class="ap-m-tip ap-m-tip-default">
