removed 2019 table and tip

--- a/frontend21/scss/amp-dev.scss
+++ b/frontend21/scss/amp-dev.scss
@@ -6,8 +6,8 @@
 @import '../../frontend/scss/components/molecules/format-filter-hint.scss';
 @import '../../frontend/scss/components/molecules/info-button.scss';
 @import '../../frontend/scss/components/molecules/level-toggle.scss';
-@import '../../frontend/scss/components/molecules/table.scss';
-@import '../../frontend/scss/components/molecules/tip.scss';
+/* @import '../../frontend/scss/components/molecules/table.scss'; */
+/* @import '../../frontend/scss/components/molecules/tip.scss'; */
 @import '../../frontend/scss/components/organisms/card-grid.scss';
 @import '../../frontend/scss/components/templates/docs-detail.scss';
 @import '../../frontend/scss/components/templates/docs-guides-overview.scss';
