--- a/frontend/scss/components/organisms/_sidebar.scss
+++ b/frontend/scss/components/organisms/_sidebar.scss
@@ -1,10 +1,18 @@
-@import '_extends.scss';
-@import '_functions.scss';
-@import '_mixins.scss';
-@import '_variables.scss';
+/* @import '_extends.scss'; */
+/* @import '_functions.scss'; */
+/* @import '_mixins.scss'; */
+/* @import '_variables.scss'; */
 
-@import 'components/atoms/_color.scss';
-@import 'components/atoms/_text.scss';
+/* @import 'components/atoms/_color.scss'; */
+/* @import 'components/atoms/_text.scss'; */
+
+@import '../../extends';
+@import '../../functions';
+@import '../../mixins';
+@import '../../variables';
+
+@import '../atoms/_color.scss';
+@import '../atoms/_text.scss';
 
 @mixin sidebar-ampsidebar {
   width: 100%;
