removed doc-detail, doc-guides SCSS

--- a/frontend21/scss/amp-dev.scss
+++ b/frontend21/scss/amp-dev.scss
@@ -10,8 +10,8 @@
 /* @import '../../frontend/scss/components/molecules/tip.scss'; */
 @import '../../frontend/scss/components/organisms/_sidebar.scss';
 @import '../../frontend/scss/components/organisms/card-grid.scss';
-@import '../../frontend/scss/components/templates/docs-detail.scss';
-@import '../../frontend/scss/components/templates/docs-guides-overview.scss';
+/* @import '../../frontend/scss/components/templates/docs-detail.scss'; */
+/* @import '../../frontend/scss/components/templates/docs-guides-overview.scss'; */
 
 @import 'variables.scss';
 @import 'functions.scss';
