--- a/frontend21/scss/amp-dev.scss
+++ b/frontend21/scss/amp-dev.scss
@@ -3,7 +3,7 @@
 @import '../../frontend/scss/components/atoms/_icon.scss';
 @import '../../frontend/scss/components/atoms/_color.scss';
 /* @import '../../frontend/scss/components/atoms/_button.scss'; */
-/* @import '../../frontend/scss/components/molecules/format-filter-hint.scss'; */
+@import '../../frontend/scss/components/molecules/format-filter-hint.scss';
 /* @import '../../frontend/scss/components/molecules/info-button.scss'; */
 /* @import '../../frontend/scss/components/molecules/level-toggle.scss'; */
 /* @import '../../frontend/scss/components/molecules/table.scss'; */
