--- a/frontend/templates/views/partials/content.j2
+++ b/frontend/templates/views/partials/content.j2
@@ -3,6 +3,7 @@
 {# {% include '/views/partials/toc.j2' with context %} #}
 {% include '/views/2021/partials/toc.j2' with context %}
 
+<!-- <section class="ap-section"></section> -->
 <section class="ap--content">
   {# {% include '/views/partials/sidebar-toggle-button.j2' %} #}
   {# {% include '/views/partials/breadcrumbs.j2' %} #}
@@ -48,6 +49,7 @@
 {% else %}
 
 {# {% do doc.styles.addCssFile('css/components/molecules/tip.css') %} #}
+<!-- <section class="ap-section"></section> -->
 <section class="ap--content">
   {# {% include '/views/partials/sidebar-toggle-button.j2' %} #}
 
