--- a/frontend21/scss/amp-dev.scss
+++ b/frontend21/scss/amp-dev.scss
@@ -8,7 +8,7 @@
 /* @import '../../frontend/scss/components/molecules/level-toggle.scss'; */
 /* @import '../../frontend/scss/components/molecules/table.scss'; */
 /* @import '../../frontend/scss/components/molecules/tip.scss'; */
-@import '../../frontend/scss/components/organisms/_sidebar.scss';
+/* @import '../../frontend/scss/components/organisms/_sidebar.scss'; */
 @import '../../frontend/scss/components/organisms/card-grid.scss';
 /* @import '../../frontend/scss/components/templates/docs-detail.scss'; */
 /* @import '../../frontend/scss/components/templates/docs-guides-overview.scss'; */
