--- a/frontend/templates/views/detail/docs-detail.j2
+++ b/frontend/templates/views/detail/docs-detail.j2
@@ -1,7 +1,7 @@
 {% extends '/views/2021/base.html' %}
 
 {% block main %}
-{% include 'views/partials/sidebar-toggle-observer.j2' %}
+{# {% include 'views/partials/sidebar-toggle-observer.j2' %} #}
 {% include 'views/partials/format-filter-hint.j2' %}
 <main class="ap--main ap-t-docs-detail">
   <div class="ap--container">
