--- a/frontend/templates/views/partials/format-filter-hint.j2
+++ b/frontend/templates/views/partials/format-filter-hint.j2
@@ -1,5 +1,5 @@
 {% if doc.formats %}
-{# {% do doc.styles.addCssFile('css/components/molecules/format-filter-hint.css') %} #}
+{% do doc.styles.addCssFile('css/components/molecules/format-filter-hint.css') %}
 
 <amp-user-notification class="ap-m-format-filter-hint" id="format-filter-hint" layout="nodisplay">
 </amp-user-notification>
