--- a/frontend/templates/views/partials/header.j2
+++ b/frontend/templates/views/partials/header.j2
@@ -103,7 +103,7 @@
         <svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#magnifier"></use></svg>
       </div>
     </div>
-
+<!--
     {# blog.amp.dev shares the header with amp.dev but isn't localized.
        Therefore it's nice to have a way to turn off the language selector #}
     {% if language_selector != False %}
@@ -124,5 +124,13 @@
       </div>
     </div>
     {% endif %}
+-->
+
+    {# blog.amp.dev shares the header with amp.dev but isn't localized.
+       Therefore it's nice to have a way to turn off the language selector #}
+    {% if language_selector != False %}
+    {% include '/views/partials/language-selector.j2' %}
+    {% endif %}
+
   </div>
 </header>
